--- a/po/nl/kbluetooth.po
+++ b/po/nl/kbluetooth.po
@@ -1,26 +1,25 @@
-# translation of kbluetooth4.po to Low Saxon
+# translation of kbluetooth.po to Dutch
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Manfred Wiese <m.j.wiese@web.de>, 2009.
+# Freek de Kruijf <f.de.kruijf@gmail.com>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: kbluetooth4\n"
+"Project-Id-Version: kbluetooth\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-08 06:55+0100\n"
-"PO-Revision-Date: 2009-05-27 07:17+0200\n"
-"Last-Translator: Manfred Wiese <m.j.wiese@web.de>\n"
-"Language-Team: Low Saxon <kde-i18n-nds@kde.org>\n"
+"PO-Revision-Date: 2009-11-13 11:10+0100\n"
+"Last-Translator: Freek de Kruijf <f.de.kruijf@gmail.com>\n"
+"Language-Team: Dutch <kde-i18n-nl@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: nds\n"
-"X-Generator: Lokalize 0.3\n"
+"X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: main.cpp:30 device-manager/main.cpp:29 inputwizard/main.cpp:30
 msgid "Bluetooth management software"
-msgstr ""
+msgstr "Bluetooth-beheersoftware"
 
 #: main.cpp:37 device-manager/main.cpp:36 inputwizard/main.cpp:37
 msgid "KBluetooth"
@@ -36,15 +35,15 @@ msgstr ""
 
 #: main.cpp:43 device-manager/main.cpp:42 inputwizard/main.cpp:43
 msgid "Maintainer"
-msgstr ""
+msgstr "Onderhouder"
 
 #: main.cpp:44 device-manager/main.cpp:43 inputwizard/main.cpp:44
 msgid "Tom Patzig"
-msgstr "Tom Patzig"
+msgstr ""
 
 #: main.cpp:44 device-manager/main.cpp:43 inputwizard/main.cpp:44
 msgid "Former Developer"
-msgstr ""
+msgstr "Voormalig ontwikkelaar"
 
 #. i18n: file: adapterConf.ui:13
 #. i18n: ectx: property (windowTitle), widget (QMainWindow, AdapterUi)
@@ -56,13 +55,13 @@ msgstr ""
 #. i18n: ectx: attribute (title), widget (QWidget, tab)
 #: rc.cpp:6 rc.cpp:54
 msgid "Tab 1"
-msgstr ""
+msgstr "Tab 1"
 
 #. i18n: file: adapterConf.ui:53
 #. i18n: ectx: attribute (title), widget (QWidget, tab_2)
 #: rc.cpp:9 rc.cpp:57
 msgid "Tab 2"
-msgstr ""
+msgstr "Tab 2"
 
 #. i18n: file: adapterConf.ui:76
 #. i18n: ectx: property (text), widget (QPushButton, closePushButton)
@@ -70,25 +69,25 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QPushButton, okButton)
 #: rc.cpp:12 rc.cpp:60 rc.cpp:164
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #. i18n: file: adapterWidget.ui:22
 #. i18n: ectx: property (title), widget (QGroupBox, infoGroupBox)
 #: rc.cpp:15 rc.cpp:63
 msgid "Information"
-msgstr ""
+msgstr "Informatie"
 
 #. i18n: file: adapterWidget.ui:37
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: rc.cpp:18 rc.cpp:66
 msgid "MAC Address: "
-msgstr "MAC-Adress: "
+msgstr ""
 
 #. i18n: file: adapterWidget.ui:79
 #. i18n: ectx: property (title), widget (QGroupBox, groupBox)
 #: rc.cpp:22 rc.cpp:70 trayicon.cpp:180
 msgid "Settings"
-msgstr "Instellen"
+msgstr "Instellingen"
 
 #. i18n: file: adapterWidget.ui:94
 #. i18n: ectx: property (text), widget (QLabel, label_3)
@@ -100,13 +99,13 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:28 rc.cpp:76 agent/confirmdialog.cpp:50
 msgid "Mode: "
-msgstr ""
+msgstr "Modus: "
 
 #. i18n: file: adapterWidget.ui:132
 #. i18n: ectx: property (text), item, widget (QComboBox, modeComboBox)
 #: rc.cpp:31 rc.cpp:79
 msgid "hidden"
-msgstr "versteken"
+msgstr "verborgen"
 
 #. i18n: file: adapterWidget.ui:137
 #. i18n: ectx: property (text), item, widget (QComboBox, modeComboBox)
@@ -124,7 +123,7 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, timeoutLabel)
 #: rc.cpp:40 rc.cpp:88
 msgid "none"
-msgstr ""
+msgstr "geen"
 
 #. i18n: file: receiveDialogWidget.ui:26
 #. i18n: ectx: property (text), widget (QLabel, saveToLbl)
@@ -141,12 +140,12 @@ msgstr ""
 #: rc.cpp:47
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr "Manfred Wiese"
+msgstr "Freek de Kruijf"
 
 #: rc.cpp:48
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr "m.j.wiese@web.de"
+msgstr "f.de.kruijf@gmail.com"
 
 #. i18n: file: agent/authdialog.ui:19
 #. i18n: ectx: property (windowTitle), widget (QDialog, AuthDialog)
@@ -173,7 +172,7 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:103 rc.cpp:129 rc.cpp:152
 msgid "Name: "
-msgstr ""
+msgstr "Naam: "
 
 #. i18n: file: agent/authdialog.ui:77
 #. i18n: ectx: property (text), widget (QLabel, label_3)
@@ -183,25 +182,25 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:107 rc.cpp:133 rc.cpp:156
 msgid "Address: "
-msgstr "Adress:"
+msgstr ""
 
 #. i18n: file: agent/authdialog.ui:101
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:111
 msgid "Service: "
-msgstr "Deenst: "
+msgstr ""
 
 #. i18n: file: agent/authdialog.ui:133
 #. i18n: ectx: property (text), widget (QPushButton, allwTrustButton)
 #: rc.cpp:116
 msgid "Always Trust"
-msgstr "Jümmers vertroen"
+msgstr ""
 
 #. i18n: file: agent/authdialog.ui:140
 #. i18n: ectx: property (text), widget (QPushButton, trustButton)
 #: rc.cpp:119
 msgid "Trust"
-msgstr "Vertroen"
+msgstr "Vertrouwen"
 
 #. i18n: file: agent/authdialog.ui:147
 #. i18n: ectx: property (text), widget (QPushButton, cancelButton)
@@ -211,13 +210,13 @@ msgstr "Vertroen"
 #. i18n: ectx: property (text), widget (QPushButton, cancelButton)
 #: rc.cpp:122 rc.cpp:167 rc.cpp:195
 msgid "Cancel"
-msgstr "Afbreken"
+msgstr "Annuleren"
 
 #. i18n: file: agent/confirmdialog.ui:129
 #. i18n: ectx: property (text), widget (QPushButton, yesButton)
 #: rc.cpp:140
 msgid "Yes"
-msgstr "Jo"
+msgstr "Ja"
 
 #. i18n: file: agent/confirmdialog.ui:136
 #. i18n: ectx: property (text), widget (QPushButton, noButton)
@@ -291,13 +290,13 @@ msgstr ""
 #: deviceselector/devicesel.cpp:118 inputwizard/wizarddialog.cpp:112
 #: inputwizard/wizarddialog.cpp:229 inputwizard/wizarddialog.cpp:245
 msgid "&Search"
-msgstr ""
+msgstr "&Zoeken"
 
 #. i18n: file: deviceselector/deviceselector.ui:127
 #. i18n: ectx: property (text), widget (QPushButton, sendButton)
 #: rc.cpp:198 trayicon.cpp:170
 msgid "Send"
-msgstr ""
+msgstr "Verzenden"
 
 #. i18n: file: device-manager/deviceman.ui:14
 #. i18n: ectx: property (windowTitle), widget (QMainWindow, DeviceManager)
@@ -309,19 +308,19 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: rc.cpp:204
 msgid "Address:"
-msgstr "Adress:"
+msgstr "Adres:"
 
 #. i18n: file: device-manager/deviceman.ui:64
 #. i18n: ectx: property (text), widget (QLabel, label_2)
 #: rc.cpp:207
 msgid "Type:"
-msgstr "Typ:"
+msgstr "Type:"
 
 #. i18n: file: device-manager/deviceman.ui:95
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:210
 msgid "Trust:"
-msgstr "Vertroen:"
+msgstr "Vertrouwen:"
 
 #. i18n: file: device-manager/deviceman.ui:126
 #. i18n: ectx: property (text), widget (QLabel, label_4)
@@ -335,7 +334,7 @@ msgstr "Status:"
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:216 rc.cpp:231
 msgid "New..."
-msgstr "Nieg..."
+msgstr "Nieuw..."
 
 #. i18n: file: device-manager/deviceman.ui:220
 #. i18n: ectx: property (text), widget (QPushButton, removeButton)
@@ -343,7 +342,7 @@ msgstr "Nieg..."
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:219 rc.cpp:234
 msgid "Remove"
-msgstr "Wegmaken"
+msgstr "Verwijderen"
 
 #. i18n: file: device-manager/deviceman.ui:227
 #. i18n: ectx: property (text), widget (QPushButton, connectButton)
@@ -352,7 +351,7 @@ msgstr "Wegmaken"
 #: rc.cpp:222 rc.cpp:237 device-manager/devicemanager.cpp:157
 #: device-manager/devicemanager.cpp:182 device-manager/devicemanager.cpp:251
 msgid "Connect"
-msgstr "Tokoppeln"
+msgstr "Verbinden"
 
 #. i18n: file: device-manager/deviceman.ui:234
 #. i18n: ectx: property (text), widget (QPushButton, setTrustButton)
@@ -365,7 +364,7 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QPushButton, closeButton)
 #: rc.cpp:228
 msgid "Close"
-msgstr "Tomaken"
+msgstr "Sluiten"
 
 #. i18n: file: device-manager/deviceman.ui:280
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
@@ -378,7 +377,7 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:243
 msgid "Quit"
-msgstr ""
+msgstr "Afsluiten"
 
 #. i18n: file: device-manager/deviceman.ui:290
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
@@ -392,15 +391,15 @@ msgstr ""
 
 #: trayicon.cpp:163
 msgid "Enable"
-msgstr ""
+msgstr "Activeren"
 
 #: trayicon.cpp:167
 msgid "Configure..."
-msgstr ""
+msgstr "Instellen..."
 
 #: trayicon.cpp:172
 msgid "File"
-msgstr ""
+msgstr "Bestand"
 
 #: trayicon.cpp:175
 msgid "Clipboard Text"
@@ -408,7 +407,7 @@ msgstr ""
 
 #: trayicon.cpp:177
 msgid "Device Manager"
-msgstr ""
+msgstr "Apparaatbeheer"
 
 #: trayicon.cpp:182
 msgid "Received files"
@@ -424,7 +423,7 @@ msgstr ""
 
 #: trayicon.cpp:192
 msgid "About"
-msgstr ""
+msgstr "Info over"
 
 #: trayicon.cpp:321
 msgid "No Bluetooth Adapter"
@@ -432,7 +431,7 @@ msgstr ""
 
 #: trayicon.cpp:424
 msgid "Select File"
-msgstr ""
+msgstr "Bestand selecteren"
 
 #: trayicon.cpp:432 trayicon.cpp:462
 msgid "Selecting a device starts the file transfer."
@@ -440,7 +439,7 @@ msgstr ""
 
 #: trayicon.cpp:536
 msgid "Select"
-msgstr ""
+msgstr "Selecteren"
 
 #: trayicon.cpp:537 trayicon.cpp:592
 msgid ""
@@ -474,22 +473,16 @@ msgid "&Stop Searching"
 msgstr ""
 
 #: device-manager/devicemanager.cpp:153 device-manager/devicemanager.cpp:246
-#, fuzzy
-#| msgid "Connect"
 msgid "Connected"
-msgstr "Tokoppeln"
+msgstr "Verbonden"
 
 #: device-manager/devicemanager.cpp:154 device-manager/devicemanager.cpp:247
-#, fuzzy
-#| msgid "Connect"
 msgid "Disconnect"
-msgstr "Tokoppeln"
+msgstr "Verbinding verbreken"
 
 #: device-manager/devicemanager.cpp:156 device-manager/devicemanager.cpp:250
-#, fuzzy
-#| msgid "Connect"
 msgid "Not connected"
-msgstr "Tokoppeln"
+msgstr "Niet verbonden"
 
 #: device-manager/devicemanager.cpp:162 device-manager/devicemanager.cpp:257
 msgid "Always trust"
@@ -500,16 +493,14 @@ msgid "Not trusted"
 msgstr ""
 
 #: device-manager/devicemanager.cpp:248
-#, fuzzy, kde-format
-#| msgid "Connect"
+#, kde-format
 msgid "Connected to %1"
-msgstr "Tokoppeln"
+msgstr "Verbonden met %1"
 
 #: device-manager/devicemanager.cpp:252
-#, fuzzy, kde-format
-#| msgid "Connect"
+#, kde-format
 msgid "Disconnected from %1"
-msgstr "Tokoppeln"
+msgstr ""
 
 #: device-manager/devicemanager.cpp:259
 #, kde-format
@@ -543,7 +534,7 @@ msgstr ""
 
 #: inputwizard/wizarddialog.cpp:140
 msgid "Summary"
-msgstr "Tosammenfaten"
+msgstr "Samenvatting"
 
 #: inputwizard/wizarddialog.cpp:141 inputwizard/wizarddialog.cpp:347
 msgid "Connection will be established to this Bluetooth device"
@@ -551,7 +542,7 @@ msgstr ""
 
 #: inputwizard/wizarddialog.cpp:170
 msgid "Finished"
-msgstr "Afslaten"
+msgstr "Gereed"
 
 #: inputwizard/wizarddialog.cpp:171
 msgid "Please wait, until the connection to your Bluetooth Device is done..."
@@ -572,21 +563,18 @@ msgstr ""
 #: inputwizard/wizarddialog.cpp:348
 #, kde-format
 msgid "<b>Name: </b>%1"
-msgstr "<b>Naam: </b>%1"
+msgstr ""
 
 #: inputwizard/wizarddialog.cpp:349
 #, kde-format
 msgid "<b>Address: </b>%1"
-msgstr "<b>Adress: </b>%1"
+msgstr ""
 
 #: inputwizard/wizarddialog.cpp:350
 #, kde-format
 msgid "<b>Device class: </b>%1"
-msgstr "<b>Reedschapklass: </b>%1"
+msgstr ""
 
 #: inputwizard/wizarddialog.cpp:358
 msgid "Sorry your Bluetooth Device does not support input Service."
 msgstr ""
-
-#~ msgid "Tasks"
-#~ msgstr "Opgaven"
