--- a/po/it/kbluetooth.po
+++ b/po/it/kbluetooth.po
@@ -1,42 +1,40 @@
-# translation of kbluetooth4.po to Low Saxon
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Manfred Wiese <m.j.wiese@web.de>, 2009.
+# Mino Mitrugno <mino.mitrugno@unisalento.it>, 2009.
 msgid ""
 msgstr ""
-"Project-Id-Version: kbluetooth4\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-08 06:55+0100\n"
-"PO-Revision-Date: 2009-05-27 07:17+0200\n"
-"Last-Translator: Manfred Wiese <m.j.wiese@web.de>\n"
-"Language-Team: Low Saxon <kde-i18n-nds@kde.org>\n"
+"PO-Revision-Date: 2009-11-16 11:40+0100\n"
+"Last-Translator: Mino Mitrugno <mino.mitrugno@unisalento.it>\n"
+"Language-Team: Italiano <kde-i18n-it@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: nds\n"
-"X-Generator: Lokalize 0.3\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: main.cpp:30 device-manager/main.cpp:29 inputwizard/main.cpp:30
 msgid "Bluetooth management software"
-msgstr ""
+msgstr "Software di gestione Bluetooth"
 
 #: main.cpp:37 device-manager/main.cpp:36 inputwizard/main.cpp:37
 msgid "KBluetooth"
-msgstr ""
+msgstr "KBluetooth"
 
 #: main.cpp:41 device-manager/main.cpp:40 inputwizard/main.cpp:41
 msgid "(c) 2008-2009, The KBluetooth Developers"
-msgstr ""
+msgstr "(c) 2008-2009, The KBluetooth Developers"
 
 #: main.cpp:43 device-manager/main.cpp:42 inputwizard/main.cpp:43
 msgid "Alex Fiestas"
-msgstr ""
+msgstr "Alex Fiestas"
 
 #: main.cpp:43 device-manager/main.cpp:42 inputwizard/main.cpp:43
 msgid "Maintainer"
-msgstr ""
+msgstr "Responsabile"
 
 #: main.cpp:44 device-manager/main.cpp:43 inputwizard/main.cpp:44
 msgid "Tom Patzig"
@@ -50,19 +48,19 @@ msgstr ""
 #. i18n: ectx: property (windowTitle), widget (QMainWindow, AdapterUi)
 #: rc.cpp:3 rc.cpp:51
 msgid "Bluetooth Adapter"
-msgstr ""
+msgstr "Adattatore Bluetooth"
 
 #. i18n: file: adapterConf.ui:40
 #. i18n: ectx: attribute (title), widget (QWidget, tab)
 #: rc.cpp:6 rc.cpp:54
 msgid "Tab 1"
-msgstr ""
+msgstr "Tab 1"
 
 #. i18n: file: adapterConf.ui:53
 #. i18n: ectx: attribute (title), widget (QWidget, tab_2)
 #: rc.cpp:9 rc.cpp:57
 msgid "Tab 2"
-msgstr ""
+msgstr "Tab 2"
 
 #. i18n: file: adapterConf.ui:76
 #. i18n: ectx: property (text), widget (QPushButton, closePushButton)
@@ -70,31 +68,31 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QPushButton, okButton)
 #: rc.cpp:12 rc.cpp:60 rc.cpp:164
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #. i18n: file: adapterWidget.ui:22
 #. i18n: ectx: property (title), widget (QGroupBox, infoGroupBox)
 #: rc.cpp:15 rc.cpp:63
 msgid "Information"
-msgstr ""
+msgstr "Informazioni"
 
 #. i18n: file: adapterWidget.ui:37
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: rc.cpp:18 rc.cpp:66
 msgid "MAC Address: "
-msgstr "MAC-Adress: "
+msgstr "MAC Address:"
 
 #. i18n: file: adapterWidget.ui:79
 #. i18n: ectx: property (title), widget (QGroupBox, groupBox)
 #: rc.cpp:22 rc.cpp:70 trayicon.cpp:180
 msgid "Settings"
-msgstr "Instellen"
+msgstr "Impostazioni"
 
 #. i18n: file: adapterWidget.ui:94
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:25 rc.cpp:73
 msgid "Adapter Name: "
-msgstr ""
+msgstr "Nome Adattatore:"
 
 #. i18n: file: adapterWidget.ui:119
 #. i18n: ectx: property (text), widget (QLabel, label_4)
@@ -106,47 +104,47 @@ msgstr ""
 #. i18n: ectx: property (text), item, widget (QComboBox, modeComboBox)
 #: rc.cpp:31 rc.cpp:79
 msgid "hidden"
-msgstr "versteken"
+msgstr "nascosto"
 
 #. i18n: file: adapterWidget.ui:137
 #. i18n: ectx: property (text), item, widget (QComboBox, modeComboBox)
 #: rc.cpp:34 rc.cpp:82
 msgid "discoverable"
-msgstr ""
+msgstr "rilevabile"
 
 #. i18n: file: adapterWidget.ui:154
 #. i18n: ectx: property (text), widget (QLabel, label_5)
 #: rc.cpp:37 rc.cpp:85
 msgid "Discoverable Timeout:"
-msgstr ""
+msgstr "Scadenza del tempo di Rilevamento"
 
 #. i18n: file: adapterWidget.ui:179
 #. i18n: ectx: property (text), widget (QLabel, timeoutLabel)
 #: rc.cpp:40 rc.cpp:88
 msgid "none"
-msgstr ""
+msgstr "Nessuno"
 
 #. i18n: file: receiveDialogWidget.ui:26
 #. i18n: ectx: property (text), widget (QLabel, saveToLbl)
 #: rc.cpp:43 rc.cpp:91
 msgid "Save file to:"
-msgstr ""
+msgstr "Salva file in:"
 
 #. i18n: file: receiveDialogWidget.ui:46
 #. i18n: ectx: property (text), widget (QCheckBox, saveCheck)
 #: rc.cpp:46 rc.cpp:94
 msgid "Accept all files from this device"
-msgstr ""
+msgstr "Accetta tutti i file da questo dispositivo"
 
 #: rc.cpp:47
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr "Manfred Wiese"
+msgstr "Mino Mitrugno"
 
 #: rc.cpp:48
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr "m.j.wiese@web.de"
+msgstr "mino.mitrugno@unisalento.it"
 
 #. i18n: file: agent/authdialog.ui:19
 #. i18n: ectx: property (windowTitle), widget (QDialog, AuthDialog)
@@ -156,7 +154,7 @@ msgstr "m.j.wiese@web.de"
 #. i18n: ectx: property (windowTitle), widget (QDialog, PasskeyDialog)
 #: rc.cpp:97 rc.cpp:125 rc.cpp:146
 msgid "Dialog"
-msgstr "Dialoog"
+msgstr "Finestra di dialogo"
 
 #. i18n: file: agent/authdialog.ui:31
 #. i18n: ectx: property (text), widget (QLabel, label)
@@ -164,6 +162,8 @@ msgstr "Dialoog"
 msgid ""
 "The following Bluetooth device attempts to use local Bluetooth services."
 msgstr ""
+"Il dispositivo Bluetooth seguente tenta di utilizzare i servizi Bluetooth "
+"locali."
 
 #. i18n: file: agent/authdialog.ui:53
 #. i18n: ectx: property (text), widget (QLabel, label_2)
@@ -173,7 +173,7 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:103 rc.cpp:129 rc.cpp:152
 msgid "Name: "
-msgstr ""
+msgstr "Nome:"
 
 #. i18n: file: agent/authdialog.ui:77
 #. i18n: ectx: property (text), widget (QLabel, label_3)
@@ -183,25 +183,25 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:107 rc.cpp:133 rc.cpp:156
 msgid "Address: "
-msgstr "Adress:"
+msgstr "Indirizzo:"
 
 #. i18n: file: agent/authdialog.ui:101
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:111
 msgid "Service: "
-msgstr "Deenst: "
+msgstr "Servizio:"
 
 #. i18n: file: agent/authdialog.ui:133
 #. i18n: ectx: property (text), widget (QPushButton, allwTrustButton)
 #: rc.cpp:116
 msgid "Always Trust"
-msgstr "Jümmers vertroen"
+msgstr "Sempre Fidato"
 
 #. i18n: file: agent/authdialog.ui:140
 #. i18n: ectx: property (text), widget (QPushButton, trustButton)
 #: rc.cpp:119
 msgid "Trust"
-msgstr "Vertroen"
+msgstr "Fidato"
 
 #. i18n: file: agent/authdialog.ui:147
 #. i18n: ectx: property (text), widget (QPushButton, cancelButton)
@@ -211,19 +211,19 @@ msgstr "Vertroen"
 #. i18n: ectx: property (text), widget (QPushButton, cancelButton)
 #: rc.cpp:122 rc.cpp:167 rc.cpp:195
 msgid "Cancel"
-msgstr "Afbreken"
+msgstr "Annulla"
 
 #. i18n: file: agent/confirmdialog.ui:129
 #. i18n: ectx: property (text), widget (QPushButton, yesButton)
 #: rc.cpp:140
 msgid "Yes"
-msgstr "Jo"
+msgstr "Si"
 
 #. i18n: file: agent/confirmdialog.ui:136
 #. i18n: ectx: property (text), widget (QPushButton, noButton)
 #: rc.cpp:143
 msgid "No"
-msgstr "Nee"
+msgstr "No"
 
 #. i18n: file: agent/passkeydialog.ui:19
 #. i18n: ectx: property (text), widget (QLabel, label)
@@ -243,13 +243,13 @@ msgstr "PIN"
 #. i18n: ectx: property (windowTitle), widget (QDialog, deviceSelector)
 #: rc.cpp:170 inputwizard/wizarddialog.cpp:100
 msgid "Select your Device"
-msgstr ""
+msgstr "Seleziona il tuo Dispositivo"
 
 #. i18n: file: deviceselector/deviceselector.ui:35
 #. i18n: ectx: property (text), widget (QCheckBox, extraCheckBox)
 #: rc.cpp:173
 msgid "Unlock Screen when device appears again"
-msgstr ""
+msgstr "Sblocca lo Scermo quando il dispositivo appare di nuovo"
 
 #. i18n: file: deviceselector/deviceselector.ui:53
 #. i18n: ectx: property (text), widget (QLabel, label)
@@ -291,43 +291,43 @@ msgstr ""
 #: deviceselector/devicesel.cpp:118 inputwizard/wizarddialog.cpp:112
 #: inputwizard/wizarddialog.cpp:229 inputwizard/wizarddialog.cpp:245
 msgid "&Search"
-msgstr ""
+msgstr "&Ricerca"
 
 #. i18n: file: deviceselector/deviceselector.ui:127
 #. i18n: ectx: property (text), widget (QPushButton, sendButton)
 #: rc.cpp:198 trayicon.cpp:170
 msgid "Send"
-msgstr ""
+msgstr "Spedisci"
 
 #. i18n: file: device-manager/deviceman.ui:14
 #. i18n: ectx: property (windowTitle), widget (QMainWindow, DeviceManager)
 #: rc.cpp:201
 msgid "Bluetooth Device Manager"
-msgstr ""
+msgstr "Gestore dei Dispositivi Bluetooth"
 
 #. i18n: file: device-manager/deviceman.ui:33
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: rc.cpp:204
 msgid "Address:"
-msgstr "Adress:"
+msgstr "Indirizzo:"
 
 #. i18n: file: device-manager/deviceman.ui:64
 #. i18n: ectx: property (text), widget (QLabel, label_2)
 #: rc.cpp:207
 msgid "Type:"
-msgstr "Typ:"
+msgstr "Tipo:"
 
 #. i18n: file: device-manager/deviceman.ui:95
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:210
 msgid "Trust:"
-msgstr "Vertroen:"
+msgstr "Fiducia:"
 
 #. i18n: file: device-manager/deviceman.ui:126
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:213
 msgid "Status:"
-msgstr "Status:"
+msgstr "Stato:"
 
 #. i18n: file: device-manager/deviceman.ui:213
 #. i18n: ectx: property (text), widget (QPushButton, newDevButton)
@@ -335,7 +335,7 @@ msgstr "Status:"
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:216 rc.cpp:231
 msgid "New..."
-msgstr "Nieg..."
+msgstr "Nuovo..."
 
 #. i18n: file: device-manager/deviceman.ui:220
 #. i18n: ectx: property (text), widget (QPushButton, removeButton)
@@ -343,7 +343,7 @@ msgstr "Nieg..."
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:219 rc.cpp:234
 msgid "Remove"
-msgstr "Wegmaken"
+msgstr "Rimuovi"
 
 #. i18n: file: device-manager/deviceman.ui:227
 #. i18n: ectx: property (text), widget (QPushButton, connectButton)
@@ -352,33 +352,33 @@ msgstr "Wegmaken"
 #: rc.cpp:222 rc.cpp:237 device-manager/devicemanager.cpp:157
 #: device-manager/devicemanager.cpp:182 device-manager/devicemanager.cpp:251
 msgid "Connect"
-msgstr "Tokoppeln"
+msgstr "Connesso"
 
 #. i18n: file: device-manager/deviceman.ui:234
 #. i18n: ectx: property (text), widget (QPushButton, setTrustButton)
 #: rc.cpp:225 device-manager/devicemanager.cpp:166
 #: device-manager/devicemanager.cpp:262
 msgid "Set Trusted"
-msgstr ""
+msgstr "Imposta Fiducia"
 
 #. i18n: file: device-manager/deviceman.ui:254
 #. i18n: ectx: property (text), widget (QPushButton, closeButton)
 #: rc.cpp:228
 msgid "Close"
-msgstr "Tomaken"
+msgstr "Chiudi"
 
 #. i18n: file: device-manager/deviceman.ui:280
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:240 device-manager/devicemanager.cpp:163
 #: device-manager/devicemanager.cpp:258
 msgid "Remove Trust"
-msgstr ""
+msgstr "Rimuovi Fiducia"
 
 #. i18n: file: device-manager/deviceman.ui:285
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:243
 msgid "Quit"
-msgstr ""
+msgstr "Uscita"
 
 #. i18n: file: device-manager/deviceman.ui:290
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
@@ -392,15 +392,15 @@ msgstr ""
 
 #: trayicon.cpp:163
 msgid "Enable"
-msgstr ""
+msgstr "Abilitato"
 
 #: trayicon.cpp:167
 msgid "Configure..."
-msgstr ""
+msgstr "Configura..."
 
 #: trayicon.cpp:172
 msgid "File"
-msgstr ""
+msgstr "File"
 
 #: trayicon.cpp:175
 msgid "Clipboard Text"
@@ -408,19 +408,19 @@ msgstr ""
 
 #: trayicon.cpp:177
 msgid "Device Manager"
-msgstr ""
+msgstr "Gestione Dispositivo"
 
 #: trayicon.cpp:182
 msgid "Received files"
-msgstr ""
+msgstr "Files Ricevuti"
 
 #: trayicon.cpp:183
 msgid "Bluetooth Adapters"
-msgstr ""
+msgstr "Dispositivi Bluetooth"
 
 #: trayicon.cpp:184
 msgid "Obex server"
-msgstr ""
+msgstr "Obex server"
 
 #: trayicon.cpp:192
 msgid "About"
@@ -428,11 +428,11 @@ msgstr ""
 
 #: trayicon.cpp:321
 msgid "No Bluetooth Adapter"
-msgstr ""
+msgstr "Adattatore Bluetooth non presente"
 
 #: trayicon.cpp:424
 msgid "Select File"
-msgstr ""
+msgstr "Sleziona il file"
 
 #: trayicon.cpp:432 trayicon.cpp:462
 msgid "Selecting a device starts the file transfer."
@@ -440,7 +440,7 @@ msgstr ""
 
 #: trayicon.cpp:536
 msgid "Select"
-msgstr ""
+msgstr "Seleziona"
 
 #: trayicon.cpp:537 trayicon.cpp:592
 msgid ""
@@ -451,11 +451,11 @@ msgstr ""
 
 #: trayicon.cpp:631
 msgid "Received files directory:"
-msgstr ""
+msgstr "Ricevuto directory files:"
 
 #: trayicon.cpp:749
 msgid "Receive files over bluetooth?"
-msgstr ""
+msgstr "Ricevi files sul Bluetooth?"
 
 #: agent/confirmdialog.cpp:49
 msgid "Switch Bluetooth Adapter?"
@@ -463,53 +463,45 @@ msgstr ""
 
 #: agent/confirmdialog.cpp:56
 msgid "Confirm passkey?"
-msgstr ""
+msgstr "Conferma password?"
 
 #: agent/confirmdialog.cpp:57
 msgid "PassKey: "
-msgstr ""
+msgstr "Password:"
 
 #: deviceselector/devicesel.cpp:107
 msgid "&Stop Searching"
-msgstr ""
+msgstr "&Ferma Ricerca"
 
 #: device-manager/devicemanager.cpp:153 device-manager/devicemanager.cpp:246
-#, fuzzy
-#| msgid "Connect"
 msgid "Connected"
-msgstr "Tokoppeln"
+msgstr "Connesso"
 
 #: device-manager/devicemanager.cpp:154 device-manager/devicemanager.cpp:247
-#, fuzzy
-#| msgid "Connect"
 msgid "Disconnect"
-msgstr "Tokoppeln"
+msgstr "Disconnesso"
 
 #: device-manager/devicemanager.cpp:156 device-manager/devicemanager.cpp:250
-#, fuzzy
-#| msgid "Connect"
 msgid "Not connected"
-msgstr "Tokoppeln"
+msgstr "Non connesso"
 
 #: device-manager/devicemanager.cpp:162 device-manager/devicemanager.cpp:257
 msgid "Always trust"
-msgstr ""
+msgstr "Sempre affidabile"
 
 #: device-manager/devicemanager.cpp:165 device-manager/devicemanager.cpp:261
 msgid "Not trusted"
-msgstr ""
+msgstr "Non affidabile"
 
 #: device-manager/devicemanager.cpp:248
-#, fuzzy, kde-format
-#| msgid "Connect"
+#, kde-format
 msgid "Connected to %1"
-msgstr "Tokoppeln"
+msgstr "Connesso a %1"
 
 #: device-manager/devicemanager.cpp:252
-#, fuzzy, kde-format
-#| msgid "Connect"
+#, kde-format
 msgid "Disconnected from %1"
-msgstr "Tokoppeln"
+msgstr ""
 
 #: device-manager/devicemanager.cpp:259
 #, kde-format
@@ -523,70 +515,74 @@ msgstr ""
 
 #: inputwizard/wizarddialog.cpp:55
 msgid "Bluetooth Device Wizard"
-msgstr ""
+msgstr "Configurazione Guidata del Dispositivo Bluetooth"
 
 #: inputwizard/wizarddialog.cpp:82
 msgid "Setup Bluetooth Devices"
-msgstr ""
+msgstr "Settaggio del Dispositivo Bluetooth"
 
 #: inputwizard/wizarddialog.cpp:84
 msgid "This wizard will help to setup your Bluetooth devices."
 msgstr ""
+"La configurazione guidata aiuterà a impostare i tuoi dispositivi Bluetooth."
 
 #: inputwizard/wizarddialog.cpp:102
 msgid "Please select your Bluetooth device."
-msgstr ""
+msgstr "Perfavore seleziona il tuo dispositivo Bluetooth"
 
 #: inputwizard/wizarddialog.cpp:108
 msgid "<b>If your Device is not in the List:</b>"
-msgstr ""
+msgstr "<b>se il tuo Dispositivo non è nella lista:</b>"
 
 #: inputwizard/wizarddialog.cpp:140
 msgid "Summary"
-msgstr "Tosammenfaten"
+msgstr "Sommario"
 
 #: inputwizard/wizarddialog.cpp:141 inputwizard/wizarddialog.cpp:347
 msgid "Connection will be established to this Bluetooth device"
-msgstr ""
+msgstr "La connessione sarà stabilita al dispositivo Bluetooth"
 
 #: inputwizard/wizarddialog.cpp:170
 msgid "Finished"
-msgstr "Afslaten"
+msgstr "Finito"
 
 #: inputwizard/wizarddialog.cpp:171
 msgid "Please wait, until the connection to your Bluetooth Device is done..."
 msgstr ""
+"Per favore aspetta, finchè la connessione al tuo dispositivo Bluetooth è "
+"avvenuta..."
 
 #: inputwizard/wizarddialog.cpp:235
 msgid "&Stop Search"
-msgstr ""
+msgstr "&Ferma Ricerca"
 
 #: inputwizard/wizarddialog.cpp:275
 msgid "Checking your Bluetooth Device for input capabilities..."
-msgstr ""
+msgstr "Controlla il tuo dispositivo Bluetooth per disponibilità di input..."
 
 #: inputwizard/wizarddialog.cpp:316
 msgid "Your Device is setup properly and should work now."
-msgstr ""
+msgstr "Il tuo dispositivo è impostato correttamente e dovrebbe lavorare ora."
 
 #: inputwizard/wizarddialog.cpp:348
 #, kde-format
 msgid "<b>Name: </b>%1"
-msgstr "<b>Naam: </b>%1"
+msgstr "<b>Nome: </b>%1"
 
 #: inputwizard/wizarddialog.cpp:349
 #, kde-format
 msgid "<b>Address: </b>%1"
-msgstr "<b>Adress: </b>%1"
+msgstr "<b>Indirizzo: </b>%1"
 
 #: inputwizard/wizarddialog.cpp:350
 #, kde-format
 msgid "<b>Device class: </b>%1"
-msgstr "<b>Reedschapklass: </b>%1"
+msgstr "<b>Classe del del dispositivo: </b>%1"
 
 #: inputwizard/wizarddialog.cpp:358
 msgid "Sorry your Bluetooth Device does not support input Service."
 msgstr ""
+"Mi spiace il tuo Dispositivo Bluetooth non supporta il Servizio di input"
 
-#~ msgid "Tasks"
-#~ msgstr "Opgaven"
+#~ msgid "Error creating Bluetooth Server"
+#~ msgstr "Errore creando il Bluetooth Server"
