--- a/po/pa/kbluetooth.po
+++ b/po/pa/kbluetooth.po
@@ -1,34 +1,32 @@
-# translation of kbluetooth4.po to Low Saxon
 # Copyright (C) YEAR This_file_is_part_of_KDE
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Manfred Wiese <m.j.wiese@web.de>, 2009.
+# A S Alam <aalam@users.sf.net>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: kbluetooth4\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-08 06:55+0100\n"
-"PO-Revision-Date: 2009-05-27 07:17+0200\n"
-"Last-Translator: Manfred Wiese <m.j.wiese@web.de>\n"
-"Language-Team: Low Saxon <kde-i18n-nds@kde.org>\n"
+"PO-Revision-Date: 2010-01-31 08:05+0530\n"
+"Last-Translator: A S Alam <aalam@users.sf.net>\n"
+"Language-Team: ਪੰਜਾਬੀ <punjabi-users@lists.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: nds\n"
-"X-Generator: Lokalize 0.3\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: main.cpp:30 device-manager/main.cpp:29 inputwizard/main.cpp:30
 msgid "Bluetooth management software"
-msgstr ""
+msgstr "ਬਲਿਊਟੁੱਟ ਪਰਬੰਧ ਸਾਫਟਵੇਅਰ"
 
 #: main.cpp:37 device-manager/main.cpp:36 inputwizard/main.cpp:37
 msgid "KBluetooth"
-msgstr ""
+msgstr "ਕੇਬਲਿਊਟੁੱਥ"
 
 #: main.cpp:41 device-manager/main.cpp:40 inputwizard/main.cpp:41
 msgid "(c) 2008-2009, The KBluetooth Developers"
-msgstr ""
+msgstr "(c) 2008-2009, The KBluetooth Developers"
 
 #: main.cpp:43 device-manager/main.cpp:42 inputwizard/main.cpp:43
 msgid "Alex Fiestas"
@@ -36,33 +34,33 @@ msgstr ""
 
 #: main.cpp:43 device-manager/main.cpp:42 inputwizard/main.cpp:43
 msgid "Maintainer"
-msgstr ""
+msgstr "ਪਰਬੰਧਕ"
 
 #: main.cpp:44 device-manager/main.cpp:43 inputwizard/main.cpp:44
 msgid "Tom Patzig"
-msgstr "Tom Patzig"
+msgstr "ਟਾਮ ਪਟਜਿਗ"
 
 #: main.cpp:44 device-manager/main.cpp:43 inputwizard/main.cpp:44
 msgid "Former Developer"
-msgstr ""
+msgstr "ਪੁਰਾਣਾ ਡਿਵੈਲਪਰ"
 
 #. i18n: file: adapterConf.ui:13
 #. i18n: ectx: property (windowTitle), widget (QMainWindow, AdapterUi)
 #: rc.cpp:3 rc.cpp:51
 msgid "Bluetooth Adapter"
-msgstr ""
+msgstr "ਬਲਿਊਟੁੱਥ ਐਡਪਟਰ"
 
 #. i18n: file: adapterConf.ui:40
 #. i18n: ectx: attribute (title), widget (QWidget, tab)
 #: rc.cpp:6 rc.cpp:54
 msgid "Tab 1"
-msgstr ""
+msgstr "ਟੈਬ 1"
 
 #. i18n: file: adapterConf.ui:53
 #. i18n: ectx: attribute (title), widget (QWidget, tab_2)
 #: rc.cpp:9 rc.cpp:57
 msgid "Tab 2"
-msgstr ""
+msgstr "ਟੈਬ 2"
 
 #. i18n: file: adapterConf.ui:76
 #. i18n: ectx: property (text), widget (QPushButton, closePushButton)
@@ -70,83 +68,83 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QPushButton, okButton)
 #: rc.cpp:12 rc.cpp:60 rc.cpp:164
 msgid "OK"
-msgstr ""
+msgstr "ਠੀਕ ਹੈ"
 
 #. i18n: file: adapterWidget.ui:22
 #. i18n: ectx: property (title), widget (QGroupBox, infoGroupBox)
 #: rc.cpp:15 rc.cpp:63
 msgid "Information"
-msgstr ""
+msgstr "ਜਾਣਕਾਰੀ"
 
 #. i18n: file: adapterWidget.ui:37
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: rc.cpp:18 rc.cpp:66
 msgid "MAC Address: "
-msgstr "MAC-Adress: "
+msgstr "MAC ਐਡਰੈੱਸ: "
 
 #. i18n: file: adapterWidget.ui:79
 #. i18n: ectx: property (title), widget (QGroupBox, groupBox)
 #: rc.cpp:22 rc.cpp:70 trayicon.cpp:180
 msgid "Settings"
-msgstr "Instellen"
+msgstr "ਸੈਟਿੰਗ"
 
 #. i18n: file: adapterWidget.ui:94
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:25 rc.cpp:73
 msgid "Adapter Name: "
-msgstr ""
+msgstr "ਐਡਪਟਰ ਨਾਂ: "
 
 #. i18n: file: adapterWidget.ui:119
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:28 rc.cpp:76 agent/confirmdialog.cpp:50
 msgid "Mode: "
-msgstr ""
+msgstr "ਮੋਡ: "
 
 #. i18n: file: adapterWidget.ui:132
 #. i18n: ectx: property (text), item, widget (QComboBox, modeComboBox)
 #: rc.cpp:31 rc.cpp:79
 msgid "hidden"
-msgstr "versteken"
+msgstr "ਓਹਲੇ"
 
 #. i18n: file: adapterWidget.ui:137
 #. i18n: ectx: property (text), item, widget (QComboBox, modeComboBox)
 #: rc.cpp:34 rc.cpp:82
 msgid "discoverable"
-msgstr ""
+msgstr "ਖੋਜ-ਯੋਗ"
 
 #. i18n: file: adapterWidget.ui:154
 #. i18n: ectx: property (text), widget (QLabel, label_5)
 #: rc.cpp:37 rc.cpp:85
 msgid "Discoverable Timeout:"
-msgstr ""
+msgstr "ਖੋਜ-ਯੋਗ ਸਮਾਂ:"
 
 #. i18n: file: adapterWidget.ui:179
 #. i18n: ectx: property (text), widget (QLabel, timeoutLabel)
 #: rc.cpp:40 rc.cpp:88
 msgid "none"
-msgstr ""
+msgstr "ਕੋਈ ਨਹੀਂ"
 
 #. i18n: file: receiveDialogWidget.ui:26
 #. i18n: ectx: property (text), widget (QLabel, saveToLbl)
 #: rc.cpp:43 rc.cpp:91
 msgid "Save file to:"
-msgstr ""
+msgstr "ਫਾਇਲ ਸੰਭਾਲੋ:"
 
 #. i18n: file: receiveDialogWidget.ui:46
 #. i18n: ectx: property (text), widget (QCheckBox, saveCheck)
 #: rc.cpp:46 rc.cpp:94
 msgid "Accept all files from this device"
-msgstr ""
+msgstr "ਇਹ ਜੰਤਰ ਤੋਂ ਸਭ ਫਾਇਲਾਂ ਮਨਜ਼ੂਰ ਕਰੋ"
 
 #: rc.cpp:47
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr "Manfred Wiese"
+msgstr "ਅਮਨਪਰੀਤ ਸਿੰਘ ਆਲਮ (A S Alam)"
 
 #: rc.cpp:48
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr "m.j.wiese@web.de"
+msgstr "aalam@user.sf.net"
 
 #. i18n: file: agent/authdialog.ui:19
 #. i18n: ectx: property (windowTitle), widget (QDialog, AuthDialog)
@@ -156,14 +154,14 @@ msgstr "m.j.wiese@web.de"
 #. i18n: ectx: property (windowTitle), widget (QDialog, PasskeyDialog)
 #: rc.cpp:97 rc.cpp:125 rc.cpp:146
 msgid "Dialog"
-msgstr "Dialoog"
+msgstr "ਡਾਈਲਾਗ"
 
 #. i18n: file: agent/authdialog.ui:31
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: rc.cpp:100
 msgid ""
 "The following Bluetooth device attempts to use local Bluetooth services."
-msgstr ""
+msgstr "ਅੱਗੇ ਦਿੱਤਾ ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਲੋਕਲ ਬਲਿਊਟੁੱਥ ਸਰਵਿਸਾਂ ਵਰਤਣ ਦੀ ਕੋਸ਼ਿਸ਼ ਕਰ ਰਿਹਾ ਹੈ।"
 
 #. i18n: file: agent/authdialog.ui:53
 #. i18n: ectx: property (text), widget (QLabel, label_2)
@@ -173,7 +171,7 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:103 rc.cpp:129 rc.cpp:152
 msgid "Name: "
-msgstr ""
+msgstr "ਨਾਂ: "
 
 #. i18n: file: agent/authdialog.ui:77
 #. i18n: ectx: property (text), widget (QLabel, label_3)
@@ -183,25 +181,25 @@ msgstr ""
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:107 rc.cpp:133 rc.cpp:156
 msgid "Address: "
-msgstr "Adress:"
+msgstr "ਐਡਰੈੱਸ: "
 
 #. i18n: file: agent/authdialog.ui:101
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:111
 msgid "Service: "
-msgstr "Deenst: "
+msgstr "ਸਰਵਿਸ: "
 
 #. i18n: file: agent/authdialog.ui:133
 #. i18n: ectx: property (text), widget (QPushButton, allwTrustButton)
 #: rc.cpp:116
 msgid "Always Trust"
-msgstr "Jümmers vertroen"
+msgstr "ਹਮੇਸ਼ਾ ਭਰੋਸਾ"
 
 #. i18n: file: agent/authdialog.ui:140
 #. i18n: ectx: property (text), widget (QPushButton, trustButton)
 #: rc.cpp:119
 msgid "Trust"
-msgstr "Vertroen"
+msgstr "ਭਰੋਸਾ ਕਰੋ"
 
 #. i18n: file: agent/authdialog.ui:147
 #. i18n: ectx: property (text), widget (QPushButton, cancelButton)
@@ -211,19 +209,19 @@ msgstr "Vertroen"
 #. i18n: ectx: property (text), widget (QPushButton, cancelButton)
 #: rc.cpp:122 rc.cpp:167 rc.cpp:195
 msgid "Cancel"
-msgstr "Afbreken"
+msgstr "ਰੱਦ ਕਰੋ"
 
 #. i18n: file: agent/confirmdialog.ui:129
 #. i18n: ectx: property (text), widget (QPushButton, yesButton)
 #: rc.cpp:140
 msgid "Yes"
-msgstr "Jo"
+msgstr "ਹਾਂ"
 
 #. i18n: file: agent/confirmdialog.ui:136
 #. i18n: ectx: property (text), widget (QPushButton, noButton)
 #: rc.cpp:143
 msgid "No"
-msgstr "Nee"
+msgstr "ਨਹੀਂ"
 
 #. i18n: file: agent/passkeydialog.ui:19
 #. i18n: ectx: property (text), widget (QLabel, label)
@@ -232,6 +230,8 @@ msgid ""
 "In order to complete the Pairing to your Bluetooth device you have to choose "
 "a PIN and re-enter that on your device."
 msgstr ""
+"ਤੁਹਾਡੇ ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਲਈ ਪੇਅਰਿੰਗ ਪੂਰਾ ਕਰਨ ਵਾਸਤੇ ਤੁਹਾਨੂੰ ਇੱਕ ਪਿੰਨ (PIN) ਚੁਣਨਾ ਪਵੇਗਾ ਅਤੇ ਤੁਹਾਡੇ "
+"ਜੰਤਰ ਉੱਤੇ ਉਹੀ ਪਿੰਨ ਫੇਰ ਦੇਣਾ ਪਵੇਗਾ।"
 
 #. i18n: file: agent/passkeydialog.ui:97
 #. i18n: ectx: property (text), widget (QLabel, label_2)
@@ -243,13 +243,13 @@ msgstr "PIN"
 #. i18n: ectx: property (windowTitle), widget (QDialog, deviceSelector)
 #: rc.cpp:170 inputwizard/wizarddialog.cpp:100
 msgid "Select your Device"
-msgstr ""
+msgstr "ਆਪਣਾ ਜੰਤਰ ਚੁਣੋ"
 
 #. i18n: file: deviceselector/deviceselector.ui:35
 #. i18n: ectx: property (text), widget (QCheckBox, extraCheckBox)
 #: rc.cpp:173
 msgid "Unlock Screen when device appears again"
-msgstr ""
+msgstr "ਜਦੋਂ ਜੰਤਰ ਮੁੜ ਉਪਲੱਬਧ ਹੋਵੇ ਤਾਂ ਸਕਰੀਨ ਅਣ-ਲਾਕ ਕਰੋ"
 
 #. i18n: file: deviceselector/deviceselector.ui:53
 #. i18n: ectx: property (text), widget (QLabel, label)
@@ -266,24 +266,34 @@ msgid ""
 "right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
 "weight:600;\">If your Device is not in the List:</span></p></body></html>"
 msgstr ""
+"<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/"
+"REC-html40/strict.dtd\">\n"
+"<html><head><meta name=\"qrichtext\" content=\"1\" /><style type=\"text/css"
+"\">\n"
+"p, li { white-space: pre-wrap; }\n"
+"</style></head><body style=\" font-family:'Sans Serif'; font-size:10pt; font-"
+"weight:400; font-style:normal;\">\n"
+"<p style=\" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-"
+"right:0px; -qt-block-indent:0; text-indent:0px;\"><span style=\" font-"
+"weight:600;\">ਜੇ ਤੁਹਾਡੇ ਜੰਤਰ ਲਿਸਟ ਵਿੱਚ ਨਹੀਂ ਹੈ:</span></p></body></html>"
 
 #. i18n: file: deviceselector/deviceselector.ui:60
 #. i18n: ectx: property (text), widget (QLabel, label_2)
 #: rc.cpp:183 inputwizard/wizarddialog.cpp:109
 msgid "* Make sure bluetooth is enabled on the device"
-msgstr ""
+msgstr "* ਯਕੀਨੀ ਬਣਾਉ ਕਿ ਜੰਤਰ ਉੱਤੇ ਬਲਿਊਟੁੱਥ ਚਾਲੂ ਹੈ "
 
 #. i18n: file: deviceselector/deviceselector.ui:67
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:186 inputwizard/wizarddialog.cpp:110
 msgid "* Make sure the device is in discoverable mode"
-msgstr ""
+msgstr "* ਯਕੀਨੀ ਬਣਾਉ ਕਿ ਜੰਤਰ ਖੋਜਯੋਗ (ਡਿਸਕਰਵੇਬਲ) ਮੋਡ ਵਿੱਚ ਹੈ।"
 
 #. i18n: file: deviceselector/deviceselector.ui:74
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:189 inputwizard/wizarddialog.cpp:111
 msgid "* Search again"
-msgstr ""
+msgstr "* ਮੁੜ ਖੋਜੋ"
 
 #. i18n: file: deviceselector/deviceselector.ui:94
 #. i18n: ectx: property (text), widget (QPushButton, searchButton)
@@ -291,43 +301,43 @@ msgstr ""
 #: deviceselector/devicesel.cpp:118 inputwizard/wizarddialog.cpp:112
 #: inputwizard/wizarddialog.cpp:229 inputwizard/wizarddialog.cpp:245
 msgid "&Search"
-msgstr ""
+msgstr "ਖੋਜ(&S)"
 
 #. i18n: file: deviceselector/deviceselector.ui:127
 #. i18n: ectx: property (text), widget (QPushButton, sendButton)
 #: rc.cpp:198 trayicon.cpp:170
 msgid "Send"
-msgstr ""
+msgstr "ਭੇਜੋ"
 
 #. i18n: file: device-manager/deviceman.ui:14
 #. i18n: ectx: property (windowTitle), widget (QMainWindow, DeviceManager)
 #: rc.cpp:201
 msgid "Bluetooth Device Manager"
-msgstr ""
+msgstr "ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਮੈਨੇਜਰ"
 
 #. i18n: file: device-manager/deviceman.ui:33
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: rc.cpp:204
 msgid "Address:"
-msgstr "Adress:"
+msgstr "ਐਡਰੈੱਸ:"
 
 #. i18n: file: device-manager/deviceman.ui:64
 #. i18n: ectx: property (text), widget (QLabel, label_2)
 #: rc.cpp:207
 msgid "Type:"
-msgstr "Typ:"
+msgstr "ਕਿਸਮ:"
 
 #. i18n: file: device-manager/deviceman.ui:95
 #. i18n: ectx: property (text), widget (QLabel, label_3)
 #: rc.cpp:210
 msgid "Trust:"
-msgstr "Vertroen:"
+msgstr "ਟਰੱਸਟ:"
 
 #. i18n: file: device-manager/deviceman.ui:126
 #. i18n: ectx: property (text), widget (QLabel, label_4)
 #: rc.cpp:213
 msgid "Status:"
-msgstr "Status:"
+msgstr "ਹਾਲਤ:"
 
 #. i18n: file: device-manager/deviceman.ui:213
 #. i18n: ectx: property (text), widget (QPushButton, newDevButton)
@@ -335,7 +345,7 @@ msgstr "Status:"
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:216 rc.cpp:231
 msgid "New..."
-msgstr "Nieg..."
+msgstr "ਨਵਾਂ..."
 
 #. i18n: file: device-manager/deviceman.ui:220
 #. i18n: ectx: property (text), widget (QPushButton, removeButton)
@@ -343,7 +353,7 @@ msgstr "Nieg..."
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:219 rc.cpp:234
 msgid "Remove"
-msgstr "Wegmaken"
+msgstr "ਹਟਾਓ"
 
 #. i18n: file: device-manager/deviceman.ui:227
 #. i18n: ectx: property (text), widget (QPushButton, connectButton)
@@ -352,95 +362,95 @@ msgstr "Wegmaken"
 #: rc.cpp:222 rc.cpp:237 device-manager/devicemanager.cpp:157
 #: device-manager/devicemanager.cpp:182 device-manager/devicemanager.cpp:251
 msgid "Connect"
-msgstr "Tokoppeln"
+msgstr "ਕੁਨੈਕਟ"
 
 #. i18n: file: device-manager/deviceman.ui:234
 #. i18n: ectx: property (text), widget (QPushButton, setTrustButton)
 #: rc.cpp:225 device-manager/devicemanager.cpp:166
 #: device-manager/devicemanager.cpp:262
 msgid "Set Trusted"
-msgstr ""
+msgstr "ਭਰੋਸਾ ਸੈੱਟ ਕਰੋ"
 
 #. i18n: file: device-manager/deviceman.ui:254
 #. i18n: ectx: property (text), widget (QPushButton, closeButton)
 #: rc.cpp:228
 msgid "Close"
-msgstr "Tomaken"
+msgstr "ਬੰਦ ਕਰੋ"
 
 #. i18n: file: device-manager/deviceman.ui:280
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:240 device-manager/devicemanager.cpp:163
 #: device-manager/devicemanager.cpp:258
 msgid "Remove Trust"
-msgstr ""
+msgstr "ਭਰੋਸਾ ਹਟਾਓ"
 
 #. i18n: file: device-manager/deviceman.ui:285
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:243
 msgid "Quit"
-msgstr ""
+msgstr "ਬੰਦ ਕਰੋ"
 
 #. i18n: file: device-manager/deviceman.ui:290
 #. i18n: ectx: property (text), widget (QStatusBar, statusbar)
 #: rc.cpp:246
 msgid "Pair"
-msgstr ""
+msgstr "ਪੇਅਰ"
 
 #: trayicon.cpp:161
 msgid "KBlueLock"
-msgstr ""
+msgstr "KBlueLock"
 
 #: trayicon.cpp:163
 msgid "Enable"
-msgstr ""
+msgstr "ਯੋਗ"
 
 #: trayicon.cpp:167
 msgid "Configure..."
-msgstr ""
+msgstr "ਸੰਰਚਨਾ..."
 
 #: trayicon.cpp:172
 msgid "File"
-msgstr ""
+msgstr "ਫਾਇਲ"
 
 #: trayicon.cpp:175
 msgid "Clipboard Text"
-msgstr ""
+msgstr "ਕਲਿੱਪਬੋਰਡ ਟੈਕਸਟ"
 
 #: trayicon.cpp:177
 msgid "Device Manager"
-msgstr ""
+msgstr "ਜੰਤਰ ਮੈਨੇਜਰ"
 
 #: trayicon.cpp:182
 msgid "Received files"
-msgstr ""
+msgstr "ਫਾਇਲਾਂ ਮਿਲੀਆਂ"
 
 #: trayicon.cpp:183
 msgid "Bluetooth Adapters"
-msgstr ""
+msgstr "ਬਲਿਊਟੁੱਥ ਐਡਪਟਰ"
 
 #: trayicon.cpp:184
 msgid "Obex server"
-msgstr ""
+msgstr "Obex ਸਰਵਰ"
 
 #: trayicon.cpp:192
 msgid "About"
-msgstr ""
+msgstr "ਇਸ ਬਾਰੇ"
 
 #: trayicon.cpp:321
 msgid "No Bluetooth Adapter"
-msgstr ""
+msgstr "ਕੋਈ ਬਲਿਊਟੁੱਥ ਐਡਪਟਰ"
 
 #: trayicon.cpp:424
 msgid "Select File"
-msgstr ""
+msgstr "ਫਾਇਲ ਚੁਣੋ"
 
 #: trayicon.cpp:432 trayicon.cpp:462
 msgid "Selecting a device starts the file transfer."
-msgstr ""
+msgstr "ਫਾਇਲ ਟਰਾਂਸਫਰ ਕਰਨ ਲਈ ਜੰਤਰ ਚੁਣਿਆ ਜਾ ਰਿਹਾ ਹੈ।"
 
 #: trayicon.cpp:536
 msgid "Select"
-msgstr ""
+msgstr "ਚੁਣੋ"
 
 #: trayicon.cpp:537 trayicon.cpp:592
 msgid ""
@@ -451,70 +461,62 @@ msgstr ""
 
 #: trayicon.cpp:631
 msgid "Received files directory:"
-msgstr ""
+msgstr "ਫਾਇਲ ਡਾਇਰੈਕਟਰੀ ਮਿਲੀ:"
 
 #: trayicon.cpp:749
 msgid "Receive files over bluetooth?"
-msgstr ""
+msgstr "ਫਾਇਲਾਂ ਬਲਿਊਟੁੱਥ ਉੱਤੇ ਲੈਣੀਆਂ ਹਨ?"
 
 #: agent/confirmdialog.cpp:49
 msgid "Switch Bluetooth Adapter?"
-msgstr ""
+msgstr "ਬਲਿਉਟੁੱਥ ਐਡਪਟਰ ਚਾਲੂ ਹੈ?"
 
 #: agent/confirmdialog.cpp:56
 msgid "Confirm passkey?"
-msgstr ""
+msgstr "ਪਾਸ-ਕੀ ਪੁਸ਼ਟੀ?"
 
 #: agent/confirmdialog.cpp:57
 msgid "PassKey: "
-msgstr ""
+msgstr "ਪਾਸ-ਕੀ: "
 
 #: deviceselector/devicesel.cpp:107
 msgid "&Stop Searching"
-msgstr ""
+msgstr "ਖੋਜ ਰੋਕੋ(&S)"
 
 #: device-manager/devicemanager.cpp:153 device-manager/devicemanager.cpp:246
-#, fuzzy
-#| msgid "Connect"
 msgid "Connected"
-msgstr "Tokoppeln"
+msgstr "ਕੁਨੈਕਟ ਹੈ"
 
 #: device-manager/devicemanager.cpp:154 device-manager/devicemanager.cpp:247
-#, fuzzy
-#| msgid "Connect"
 msgid "Disconnect"
-msgstr "Tokoppeln"
+msgstr "ਡਿਸ-ਕੁਨੈਕਟ ਹੈ"
 
 #: device-manager/devicemanager.cpp:156 device-manager/devicemanager.cpp:250
-#, fuzzy
-#| msgid "Connect"
 msgid "Not connected"
-msgstr "Tokoppeln"
+msgstr "ਕੁਨੈਕਟ ਨਹੀਂ"
 
 #: device-manager/devicemanager.cpp:162 device-manager/devicemanager.cpp:257
 msgid "Always trust"
-msgstr ""
+msgstr "ਹਮੇਸ਼ਾ ਭਰੋਸਾ"
 
 #: device-manager/devicemanager.cpp:165 device-manager/devicemanager.cpp:261
 msgid "Not trusted"
-msgstr ""
+msgstr "ਭਰੋਸਾ ਨਹੀਂ"
 
 #: device-manager/devicemanager.cpp:248
-#, fuzzy, kde-format
-#| msgid "Connect"
+#, kde-format
 msgid "Connected to %1"
-msgstr "Tokoppeln"
+msgstr "%1 ਨਾਲ ਕੁਨੈਕਟ ਹੈ"
 
 #: device-manager/devicemanager.cpp:252
-#, fuzzy, kde-format
-#| msgid "Connect"
+#, kde-format
 msgid "Disconnected from %1"
-msgstr "Tokoppeln"
+msgstr "%1 ਤੋਂ ਡਿਸ-ਕੁਨੈਕਟ ਹੈ"
 
 #: device-manager/devicemanager.cpp:259
 #, kde-format
 msgid "Permanent Trust added for %1"
-msgstr ""
+msgstr "%1 ਲਈ ਪੱਕੇ ਤੌਰ ਉੱਤੇ ਭਰੋਸਾ ਸ਼ਾਮਲ ਕੀਤਾ"
 
 #: device-manager/devicemanager.cpp:263
 #, kde-format
@@ -523,70 +525,67 @@ msgstr ""
 
 #: inputwizard/wizarddialog.cpp:55
 msgid "Bluetooth Device Wizard"
-msgstr ""
+msgstr "ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਸਹਾਇਕ"
 
 #: inputwizard/wizarddialog.cpp:82
 msgid "Setup Bluetooth Devices"
-msgstr ""
+msgstr "ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਸੈਟਅੱਪ"
 
 #: inputwizard/wizarddialog.cpp:84
 msgid "This wizard will help to setup your Bluetooth devices."
-msgstr ""
+msgstr "ਇਹ ਸਹਾਇਕ ਤੁਹਾਨੂੰ ਤੁਹਾਡੇ ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਸੈਟਅੱਪ ਕਰਨ ਲਈ ਸਹਾਇਕ ਹੈ।"
 
 #: inputwizard/wizarddialog.cpp:102
 msgid "Please select your Bluetooth device."
-msgstr ""
+msgstr "ਆਪਣਾ ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਚੁਣੋ ਜੀ।"
 
 #: inputwizard/wizarddialog.cpp:108
 msgid "<b>If your Device is not in the List:</b>"
-msgstr ""
+msgstr "<b>ਜੇ ਤੁਹਾਡਾ ਜੰਤਰ ਲਿਸਟ ਵਿੱਚ ਨਹੀਂ ਹੈ:</b>"
 
 #: inputwizard/wizarddialog.cpp:140
 msgid "Summary"
-msgstr "Tosammenfaten"
+msgstr "ਸੰਖੇਪ"
 
 #: inputwizard/wizarddialog.cpp:141 inputwizard/wizarddialog.cpp:347
 msgid "Connection will be established to this Bluetooth device"
-msgstr ""
+msgstr "ਇਸ ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਨਾਲ ਕੁਨੈਕਸ਼ਨ ਬਣਾਇਆ ਜਾਵੇਗਾ"
 
 #: inputwizard/wizarddialog.cpp:170
 msgid "Finished"
-msgstr "Afslaten"
+msgstr "ਮੁਕੰਮਲ"
 
 #: inputwizard/wizarddialog.cpp:171
 msgid "Please wait, until the connection to your Bluetooth Device is done..."
-msgstr ""
+msgstr "ਉਡੀਕੋ ਜੀ, ਜਦੋਂ ਤੱਕ ਤੁਹਾਡੇ ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਨਾਲ ਕੁਨੈਕਸ਼ਨ ਬਣਾਇਆ ਜਾਂਦਾ ਹੈ..."
 
 #: inputwizard/wizarddialog.cpp:235
 msgid "&Stop Search"
-msgstr ""
+msgstr "ਖੋਜ ਰੋਕੋ(&S)"
 
 #: inputwizard/wizarddialog.cpp:275
 msgid "Checking your Bluetooth Device for input capabilities..."
-msgstr ""
+msgstr "ਇੰਪੁੱਟ ਸਮੱਰਥਾ ਲਈ ਤੁਹਾਡੇ ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਚੈੱਕ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ..."
 
 #: inputwizard/wizarddialog.cpp:316
 msgid "Your Device is setup properly and should work now."
-msgstr ""
+msgstr "ਤੁਹਾਡਾ ਜੰਤਰ ਠੀਕ ਤਰ੍ਹਾਂ ਸੈਟਅੱਪ ਹੋ ਗਿਆ ਹੈ ਅਤੇ ਹੁਣ ਕੰਮ ਕਰਨਾ ਚਾਹੀਦਾ ਹੈ।"
 
 #: inputwizard/wizarddialog.cpp:348
 #, kde-format
 msgid "<b>Name: </b>%1"
-msgstr "<b>Naam: </b>%1"
+msgstr "<b>ਨਾਂ: </b>%1"
 
 #: inputwizard/wizarddialog.cpp:349
 #, kde-format
 msgid "<b>Address: </b>%1"
-msgstr "<b>Adress: </b>%1"
+msgstr "<b>ਐਡਰੈੱਸ: </b>%1"
 
 #: inputwizard/wizarddialog.cpp:350
 #, kde-format
 msgid "<b>Device class: </b>%1"
-msgstr "<b>Reedschapklass: </b>%1"
+msgstr "<b>ਜੰਤਰ ਕਲਾਸ: </b>%1"
 
 #: inputwizard/wizarddialog.cpp:358
 msgid "Sorry your Bluetooth Device does not support input Service."
-msgstr ""
-
-#~ msgid "Tasks"
-#~ msgstr "Opgaven"
+msgstr "ਅਫਸੋਸ, ਪਰ ਤੁਹਾਡਾ ਬਲਿਊਟੁੱਥ ਜੰਤਰ ਇੰਪੁੱਟ ਸਰਵਿਸ ਲਈ ਸਹਾਇਕ ਨਹੀਂ ਹੈ।"
